# macfyi

./: .env.example  .gitignore  README.md  SETUP-GUIDE.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
admin macfyi/: package.json
admin-web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
coverage/: coverage-final.json  index.html
css/: app.css
docs/: ADMIN_PAGE_MASTER_PROMPT.md  ADMIN_SUBDOMAIN.md  BRANDING_ASSETS.md  CHECKOUT_GATEWAY_LYNK.md  MACFYI_ADMIN_MIGRATION.md  MACFYI_AUDIT_QA_REPORT.md  MACFYI_MANUAL_INTEGRATION_AND_QA.md  MACFYI_REBUILD_PROMPT.md  MARKETING_ECOSYSTEM.md  PROMO_PLAN_DEPLOY.md  QA_AUDIT_LANDING_PAGE.md  RELEASE_MACOS.md  SUPABASE_OPERASI_LENGKAP_ID.md  TUTORIAL_INTEGRASI_STACK.md
funnel-site/: README.md  index.html  styles.css
macfyi admin2/: README.md  package.json
macfyi-admin/: .env.example  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
macfyi-landing-page/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vercel.json  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: models.json
src-tauri/src/: lib.rs  main.rs  path_taxonomy.rs
src-tauri/src/ai/: mod.rs  model_manager.rs  runtime.rs  state.rs
src-tauri/src/commands/: ai.rs  apps.rs  common.rs  disk_explorer.rs  disk_surge.rs  license.rs  mod.rs  onboarding.rs  performance.rs  preview.rs  scan.rs  shell_probe.rs  storage.rs  trash.rs  uninstaller.rs  update.rs
(+521 files in other folders)
